--- a/HiraganaApp/View/Base.lproj/Main.storyboard
+++ b/HiraganaApp/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xe8-7O-f5d">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,38 +15,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ZDH-zm-AH7">
-                                <rect key="frame" x="20" y="156.5" width="374" height="583"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="ZDH-zm-AH7">
+                                <rect key="frame" x="20" y="88" width="374" height="754"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hYf-qE-W2q">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="201.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="309"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="漢字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHk-Zm-zXY">
-                                                <rect key="frame" x="160.5" y="0.0" width="53" height="31.5"/>
+                                                <rect key="frame" x="160.66666666666666" y="0.0" width="53" height="31.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gvE-t8-PId">
-                                                <rect key="frame" x="0.0" y="51.5" width="374" height="150"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gvE-t8-PId">
+                                                <rect key="frame" x="0.0" y="51.333333333333343" width="374" height="257.66666666666663"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="150" id="iBQ-RZ-zip"/>
-                                                </constraints>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="gvE-t8-PId" firstAttribute="width" secondItem="hYf-qE-W2q" secondAttribute="width" id="PnE-Rg-AAd"/>
+                                            <constraint firstItem="gvE-t8-PId" firstAttribute="width" secondItem="hYf-qE-W2q" secondAttribute="width" id="65v-vU-7PG"/>
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPe-f0-ril">
-                                        <rect key="frame" x="137" y="241.5" width="100" height="100"/>
+                                        <rect key="frame" x="137" y="327" width="100" height="100"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="VhL-lA-Poz"/>
-                                            <constraint firstAttribute="width" constant="100" id="cEj-XZ-jW5"/>
+                                            <constraint firstAttribute="width" constant="100" id="G4M-Fs-lnh"/>
+                                            <constraint firstAttribute="height" constant="100" id="KNy-gs-tcs"/>
                                         </constraints>
                                         <state key="normal" title="Convert">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,44 +56,40 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="edi-GF-ChC">
-                                        <rect key="frame" x="0.0" y="381.5" width="374" height="201.5"/>
+                                        <rect key="frame" x="0.0" y="445" width="374" height="309"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ひらがな" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyq-JX-YY3">
-                                                <rect key="frame" x="134.5" y="0.0" width="105.5" height="31.5"/>
+                                                <rect key="frame" x="134.33333333333334" y="0.0" width="105.66666666666666" height="31.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zto-dv-5be">
-                                                <rect key="frame" x="0.0" y="51.5" width="374" height="150"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zto-dv-5be">
+                                                <rect key="frame" x="0.0" y="51.333333333333371" width="374" height="257.66666666666669"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="150" id="QLz-pt-2VE"/>
-                                                </constraints>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="zto-dv-5be" firstAttribute="width" secondItem="edi-GF-ChC" secondAttribute="width" id="URJ-BB-QNk"/>
+                                            <constraint firstItem="zto-dv-5be" firstAttribute="width" secondItem="edi-GF-ChC" secondAttribute="width" id="cLv-FQ-30M"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="hYf-qE-W2q" firstAttribute="top" secondItem="ZDH-zm-AH7" secondAttribute="top" id="FtQ-nE-Hqc"/>
-                                    <constraint firstAttribute="bottom" secondItem="edi-GF-ChC" secondAttribute="bottom" id="Poe-OO-I4t"/>
-                                    <constraint firstItem="hYf-qE-W2q" firstAttribute="width" secondItem="ZDH-zm-AH7" secondAttribute="width" id="n3p-xH-U2E"/>
-                                    <constraint firstItem="edi-GF-ChC" firstAttribute="width" secondItem="ZDH-zm-AH7" secondAttribute="width" id="ou8-HK-btD"/>
+                                    <constraint firstItem="edi-GF-ChC" firstAttribute="height" secondItem="hYf-qE-W2q" secondAttribute="height" id="PiZ-HB-WBi"/>
+                                    <constraint firstItem="hYf-qE-W2q" firstAttribute="width" secondItem="ZDH-zm-AH7" secondAttribute="width" id="Z1j-4I-z2d"/>
+                                    <constraint firstItem="edi-GF-ChC" firstAttribute="width" secondItem="ZDH-zm-AH7" secondAttribute="width" id="jz9-pP-z9x"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ZDH-zm-AH7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0aE-4m-8Hz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZDH-zm-AH7" secondAttribute="trailing" constant="20" id="k8R-zr-MwU"/>
-                            <constraint firstItem="ZDH-zm-AH7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nNX-hb-i6S"/>
-                            <constraint firstItem="ZDH-zm-AH7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="suI-5a-hJp"/>
+                            <constraint firstItem="ZDH-zm-AH7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="DDg-uP-tbD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZDH-zm-AH7" secondAttribute="trailing" constant="20" id="JfD-pA-alV"/>
+                            <constraint firstItem="ZDH-zm-AH7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jND-bd-8au"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZDH-zm-AH7" secondAttribute="bottom" constant="20" id="lBc-SW-sT8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -109,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="126.5625"/>
+            <point key="canvasLocation" x="1046.25" y="125.70422535211267"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OYy-Ga-ELL">
