--- a/HiraganaApp/View/Base.lproj/Main.storyboard
+++ b/HiraganaApp/View/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="20" y="88" width="374" height="754"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hYf-qE-W2q">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="309"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="368"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="漢字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHk-Zm-zXY">
                                                 <rect key="frame" x="160.66666666666666" y="0.0" width="53" height="31.333333333333332"/>
@@ -28,10 +28,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gvE-t8-PId">
-                                                <rect key="frame" x="0.0" y="51.333333333333343" width="374" height="257.66666666666663"/>
+                                                <rect key="frame" x="0.0" y="51.333333333333343" width="374" height="316.66666666666663"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
@@ -39,24 +39,8 @@
                                             <constraint firstItem="gvE-t8-PId" firstAttribute="width" secondItem="hYf-qE-W2q" secondAttribute="width" id="65v-vU-7PG"/>
                                         </constraints>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cPe-f0-ril">
-                                        <rect key="frame" x="137" y="327" width="100" height="100"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="G4M-Fs-lnh"/>
-                                            <constraint firstAttribute="height" constant="100" id="KNy-gs-tcs"/>
-                                        </constraints>
-                                        <state key="normal" title="Convert">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="50"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                    </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="edi-GF-ChC">
-                                        <rect key="frame" x="0.0" y="445" width="374" height="309"/>
+                                        <rect key="frame" x="0.0" y="386" width="374" height="368"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ひらがな" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyq-JX-YY3">
                                                 <rect key="frame" x="134.33333333333334" y="0.0" width="105.66666666666666" height="31.333333333333332"/>
@@ -65,10 +49,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zto-dv-5be">
-                                                <rect key="frame" x="0.0" y="51.333333333333371" width="374" height="257.66666666666669"/>
+                                                <rect key="frame" x="0.0" y="51.333333333333371" width="374" height="316.66666666666669"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
@@ -95,7 +79,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="ひらがな変換" id="EF7-OY-4Ef"/>
                     <connections>
-                        <outlet property="convertButton" destination="cPe-f0-ril" id="prs-nq-S27"/>
                         <outlet property="hiraganaTextView" destination="zto-dv-5be" id="L2M-jF-MSh"/>
                         <outlet property="kanjiTextView" destination="gvE-t8-PId" id="nEo-cf-J2k"/>
                     </connections>
